--- a/index.html
+++ b/index.html
@@ -135,7 +135,22 @@ body {
     word-break: break-word;
   }
 }
-
+/*Linkedin styling  */
+      .libutton {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 7px;
+        text-align: center;
+        outline: none;
+        text-decoration: none !important;
+        color: #ffffff !important;
+        width: 200px;
+        height: 32px;
+        border-radius: 16px;
+        background-color: #0A66C2;
+        font-family: "SF Pro Text", Helvetica, sans-serif;
+      }
 </style>
 </head>
 <body>
@@ -259,6 +274,7 @@ body {
                             <a href="projects.html" class="btn btn-outline-light btn-lg">
                                 <i class="bi bi-collection me-2"></i>View Projects
                             </a>
+                            <a class="libutton" href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7387099061989974016" target="_blank">Subscribe on LinkedIn</a>
                         </div>
                         <div class="social-icons mt-4 d-flex gap-3">
                             <a href="https://www.linkedin.com/in/peter-eluwade-5b8a73363/" class="text-light fs-4" target="_blank" aria-label="LinkedIn Profile"><i class="bi bi-linkedin"></i></a>
@@ -1322,6 +1338,7 @@ body {
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
