--- a/index.html
+++ b/index.html
@@ -137,20 +137,42 @@ body {
 }
 /*Linkedin styling  */
       .libutton {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 7px;
-        text-align: center;
-        outline: none;
-        text-decoration: none !important;
-        color: #ffffff !important;
-        width: 200px;
-        height: 32px;
-        border-radius: 16px;
-        background-color: #0A66C2;
-        font-family: "SF Pro Text", Helvetica, sans-serif;
-      }
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 10px 18px;
+  background: linear-gradient(135deg, #0A66C2, #004182);
+  color: #fff !important;
+  font-weight: 600;
+  font-size: 15px;
+  border: none;
+  border-radius: 25px;
+  text-decoration: none !important;
+  box-shadow: 0 4px 10px rgba(10, 102, 194, 0.3);
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+/* LinkedIn Icon (optional emoji fallback if no SVG) */
+.libutton::before {
+  content: "";
+  font-size: 16px;
+  margin-right: 4px;
+}
+
+/* Hover & Active Effects */
+.libutton:hover {
+  background: linear-gradient(135deg, #004182, #0A66C2);
+  transform: translateY(-2px);
+  box-shadow: 0 6px 14px rgba(10, 102, 194, 0.4);
+}
+
+.libutton:active {
+  transform: translateY(0);
+  box-shadow: 0 3px 8px rgba(10, 102, 194, 0.2);
+}
+
 </style>
 </head>
 <body>
@@ -274,8 +296,15 @@ body {
                             <a href="projects.html" class="btn btn-outline-light btn-lg">
                                 <i class="bi bi-collection me-2"></i>View Projects
                             </a>
-                            <a class="libutton" href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7387099061989974016" target="_blank">Subscribe on LinkedIn</a>
                         </div>
+
+                        <a class="libutton" href="https://..." target="_blank">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" viewBox="0 0 24 24" style="margin-right:6px;">
+                            <path d="M20.447 20.452H17.21v-5.569c0-1.328-.025-3.036-1.849-3.036-1.853 0-2.136 1.447-2.136 2.942v5.663h-3.237V9h3.106v1.561h.045c.434-.82 1.494-1.686 3.073-1.686 3.285 0 3.889 2.163 3.889 4.977v6.6zM5.337 7.433a1.875 1.875 0 110-3.75 1.875 1.875 0 010 3.75zM6.907 20.452H3.77V9h3.137v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.225.792 24 1.771 24h20.451c.98 0 1.778-.774 1.778-1.729V1.729C24 .774 23.205 0 22.225 0z"/>
+                          </svg>
+                          Subscribe on LinkedIn
+                        </a>
+
                         <div class="social-icons mt-4 d-flex gap-3">
                             <a href="https://www.linkedin.com/in/peter-eluwade-5b8a73363/" class="text-light fs-4" target="_blank" aria-label="LinkedIn Profile"><i class="bi bi-linkedin"></i></a>
                             <a href="https://x.com/peterlightspeed" class="text-light fs-4" target="_blank" aria-label="Twitter Profile"><i class="bi bi-twitter"></i></a>
@@ -1338,6 +1367,7 @@ body {
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
