--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ body {
   align-items: center;
   justify-content: center;
   gap: 8px;
+  margin-top: 5px;
+  margin-right: 4px;
   padding: 10px 18px;
   background: linear-gradient(135deg, #0A66C2, #004182);
   color: #fff !important;
@@ -298,7 +300,7 @@ body {
                             </a>
                         </div>
 
-                        <a class="libutton" href="https://..." target="_blank">
+                        <a class="libutton" href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7387099061989974016" target="_blank">
                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" viewBox="0 0 24 24" style="margin-right:6px;">
                             <path d="M20.447 20.452H17.21v-5.569c0-1.328-.025-3.036-1.849-3.036-1.853 0-2.136 1.447-2.136 2.942v5.663h-3.237V9h3.106v1.561h.045c.434-.82 1.494-1.686 3.073-1.686 3.285 0 3.889 2.163 3.889 4.977v6.6zM5.337 7.433a1.875 1.875 0 110-3.75 1.875 1.875 0 010 3.75zM6.907 20.452H3.77V9h3.137v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.225.792 24 1.771 24h20.451c.98 0 1.778-.774 1.778-1.729V1.729C24 .774 23.205 0 22.225 0z"/>
                           </svg>
@@ -1367,6 +1369,7 @@ body {
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
