--- a/about.html
+++ b/about.html
@@ -57,24 +57,46 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logos/peter-logo.png">
     <style>
-        /* 🌐 Universal Mobile Responsiveness Fix */
+       /* 🌐 Universal Mobile Responsiveness Fix */
 html, body {
   max-width: 100%;
-  overflow-x: hidden !important;
+  overflow-x: hidden; /* no !important here */
 }
 
-/* Keep layout clean but allow sidebar to show */
-.row, .container, .container-fluid, section {
-  overflow-x: hidden !important;
+/* Make all elements box-model consistent */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-/* Specifically allow sidebar overflow */
-.social-sidebar {
-  overflow-x: visible !important;
+/* ✅ Images and media stay responsive */
+img, video {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
+/* ✅ Prevent container overflow but keep visible children */
+.container, .container-fluid, section, .row {
+  overflow-x: clip; /* instead of hidden — safer for dropdowns */
+}
 
-/* Responsive text scaling for small screens */
+/* ✅ Allow specific elements like dropdowns or sidebars to overflow properly */
+.dropdown-menu,
+.offcanvas,
+.social-sidebar,
+.navbar-collapse,
+.navbar-nav {
+  overflow: visible !important;
+}
+
+/* ✅ Fix for padding and layout shifting */
+body {
+  padding-right: 0 !important; /* prevents scrollbar compensation issue */
+}
+
+/* Responsive font scaling */
 @media (max-width: 768px) {
   html {
     font-size: 90%;
@@ -82,7 +104,8 @@ html, body {
 
   h1, h2, h3, h4, h5, h6 {
     word-break: break-word;
-
+  }
+}
 
     </style>
 </head>
@@ -1119,6 +1142,7 @@ html, body {
 
 </body>
 </html>
+
 
 
 
