--- a/certifications.html
+++ b/certifications.html
@@ -279,7 +279,7 @@ body {
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src="https://design-style-guide.freecodecamp.org/img/fcc_primary_small.svg" alt="FreeCodeCamp">
+                                <img src="https://design-style-guide.freecodecamp.org/downloads/fcc_secondary_small.png" alt="FreeCodeCamp">
                             </div>
                             <div class="certification-content">
                                 <h3>FreeCodeCamp Certificate</h3>
@@ -783,11 +783,11 @@ body {
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Google Web Developer Certification</h5>
+                    <h5 class="modal-title">West Africa Vocational Education (WAVE)</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="https://acrobat.adobe.com/id/urn:aaid:sc:EU:fe4db523-f86e-4486-964a-17c73cbbf9e3" alt="Google Web Developer Certificate" class="img-fluid certificate-img">
+                    <img src="images/certificates/wave.png" alt="West Africa Vocational Education (WAVE)" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -801,11 +801,11 @@ body {
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Meta Social Media Marketing Professional</h5>
+                    <h5 class="modal-title">PLSWorldNews Blog</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certifications/cert-2.jpg" alt="Meta Social Media Certificate" class="img-fluid certificate-img">
+                    <img src="images/certificates/plsworldnews.png" alt="PLSWorldNews Blog" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -819,11 +819,11 @@ body {
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Content Marketing Certification</h5>
+                    <h5 class="modal-title">FreeCodeCamp Certificate</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certifications/cert-3.jpg" alt="HubSpot Content Marketing Certificate" class="img-fluid certificate-img">
+                    <img src="images/certifications/freecodecamp.png" alt="FreeCodeCamp Certificate" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -1351,6 +1351,7 @@ body {
 
 </body>
 </html>
+
 
 
 
