--- a/certifications.html
+++ b/certifications.html
@@ -59,7 +59,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logos/peter-logo.png">
     <style>
-  /* 🌐 Universal Mobile Responsiveness Fix */
+  /* Universal Mobile Responsiveness Fix */
 html, body {
   max-width: 100%;
   overflow-x: hidden; /* no !important here */
@@ -72,19 +72,19 @@ html, body {
   box-sizing: border-box;
 }
 
-/* ✅ Images and media stay responsive */
+/* Images and media stay responsive */
 img, video {
   max-width: 100%;
   height: auto;
   display: block;
 }
 
-/* ✅ Prevent container overflow but keep visible children */
+/* Prevent container overflow but keep visible children */
 .container, .container-fluid, section, .row {
   overflow-x: clip; /* instead of hidden — safer for dropdowns */
 }
 
-/* ✅ Allow specific elements like dropdowns or sidebars to overflow properly */
+/* Allow specific elements like dropdowns or sidebars to overflow properly */
 .dropdown-menu,
 .offcanvas,
 .social-sidebar,
@@ -93,7 +93,7 @@ img, video {
   overflow: visible !important;
 }
 
-/* ✅ Fix for padding and layout shifting */
+/*Fix for padding and layout shifting */
 body {
   padding-right: 0 !important; /* prevents scrollbar compensation issue */
 }
@@ -253,8 +253,7 @@ body {
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src="https://blogger.googleusercontent.com/img/a/AVvXsEiOCzf7L6ajkBYHsVS8Fdt2PBJng7R
-                                    tEGip6ot2yHmRUfk0EQaCtqEDDJPKT-B84O2QARFTOEhLlsKMHUDmF6sVFLPDb0y4WNblUjA3zBf3F6mm_7cTHDg0E6eE8dKot6QJ0MhP979qAFEdMZRcL3AKBra0j4I7PQveT4j8tdvKI1jyOdkPjgOi2znS794B=s150" alt="PLSWorldNews Logo">
+                                <img src="images/certifications/plsworldnews.png" alt="PLSWorldNews Logo">
                             </div>
                             <div class="certification-content">
                                 <h3>PLSWorldNews Blog</h3>
@@ -837,11 +836,11 @@ body {
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Adobe Certified Professional</h5>
+                    <h5 class="modal-title">Digital Services Certificate</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certifications/cert-4.jpg" alt="Adobe Certificate" class="img-fluid certificate-img">
+                    <img src="images/certifications/cer" alt="Digital Services Certificate" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -1351,6 +1350,7 @@ body {
 
 </body>
 </html>
+
 
 
 
