--- a/certifications.html
+++ b/certifications.html
@@ -253,7 +253,7 @@ body {
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src="images/certifications/plsworldnews.png" alt="PLSWorldNews Logo">
+                                <img src="images/certificates/plsworldnews.png" alt="PLSWorldNews Logo">
                             </div>
                             <div class="certification-content">
                                 <h3>PLSWorldNews Blog</h3>
@@ -800,7 +800,7 @@ body {
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certificates/plsworldnews.png" alt="PLSWorldNews Blog" class="img-fluid certificate-img">
+                    <img src="" alt="PLSWorldNews Blog" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -1346,6 +1346,7 @@ body {
 
 </body>
 </html>
+
 
 
 
