--- a/certifications.html
+++ b/certifications.html
@@ -331,15 +331,15 @@ body {
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src="images-certificates/google" alt="Google Logo">
+                                <img src="images/certifications/google-logo.png" alt="Google Logo">
                             </div>
                             <div class="certification-content">
                                 <h3>AI-Powered Performance Ads Certification</h3>
                                 <p class="certification-issuer">Issued by Google</p>
                                 <p class="certification-date">Issued: july 2025 • july 2026</p>
                                 <div class="certification-skills">
-                                    <span class="badge bg-light text-dark">Git</span>
-                                    <span class="badge bg-light text-dark">Github</span>
+                                    <span class="badge bg-light text-dark">Google</span>
+                                    <span class="badge bg-light text-dark">AI-Ads</span>
                                     <span class="badge bg-light text-dark">Google Ads-</span>
                                 </div>
                                 <a href="" class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal" data-bs-target="#certModal5">
@@ -850,11 +850,11 @@ body {
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Microsoft Office Specialist</h5>
+                    <h5 class="modal-title">AI-Powered Performance Ads Certification</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certifications/cert-5.jpg" alt="Microsoft Office Certificate" class="img-fluid certificate-img">
+                    <img src="images/certifications/google-cert.png" alt="Microsoft Office Certificate" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -1346,6 +1346,7 @@ body {
 
 </body>
 </html>
+
 
 
 
