--- a/certifications.html
+++ b/certifications.html
@@ -854,7 +854,7 @@ body {
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certifications/google-cert.png" alt="Microsoft Office Certificate" class="img-fluid certificate-img">
+                    <img src="images/certificates/google-cert.png" alt="AI-Powered Performance Ads Certification" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -1346,6 +1346,7 @@ body {
 
 </body>
 </html>
+
 
 
 
