Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/certifications.html
+++ b/certifications.html
@@ -358,11 +358,11 @@ body {
                             <div class="certification-content">
                                 <h3>Wapa</h3>
                                 <p class="certification-issuer">Issued by WAPA</p>
-                                <p class="certification-date">Issued: july 2024 • No Expiration</p>
+                                <p class="certification-date">Issued: july 2025 • No Expiration</p>
                                 <div class="certification-skills">
-                                    <span class="badge bg-light text-dark">Project Management</span>
-                                    <span class="badge bg-light text-dark">Client Communication</span>
-                                    <span class="badge bg-light text-dark">Time Management</span>
+                                    <span class="badge bg-light text-dark">Graphics Design</span>
+                                    <span class="badge bg-light text-dark">Microsoft Office</span>
+                                    <span class="badge bg-light text-dark">Power point</span>
                                 </div>
                                  <a href="" class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal" data-bs-target="#certModal6">
                                     <i class="bi bi-eye me-2"></i>View Certificate
@@ -868,11 +868,11 @@ body {
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Virtual Assistant Professional</h5>
+                    <h5 class="modal-title">Skill Acquisition Programme/h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certifications/cert-6.jpg" alt="Virtual Assistant Certificate" class="img-fluid certificate-img">
+                    <img src="images/certificates/wapa-cert.jpg" alt="Wapa" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -1346,6 +1346,7 @@ body {
 
 </body>
 </html>
+
 
 
 
