--- a/certifications.html
+++ b/certifications.html
@@ -636,7 +636,7 @@ body {
                                 <p class="timeline-institution"><i class="bi bi-building me-2"></i>Camex Global certificate</p>
                             </div>
                             <div class="timeline-body">
-                                <p>Certified in digital skills including typing, basic graphic design, 
+                                <p>Certified in digital skills, including typing, basic graphic design, 
                             file conversion, and document formatting during hands-on training.</p>
                             </div>
                         </div>
@@ -818,7 +818,7 @@ body {
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certifications/freecodecamp-cert.png" alt="FreeCodeCamp Certificate" class="img-fluid certificate-img">
+                    <img src="images/certificates/freecodecamp-cert.png" alt="FreeCodeCamp Certificate" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -836,7 +836,7 @@ body {
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certifications/camex-cert.png" alt="Digital Services Certificate" class="img-fluid certificate-img">
+                    <img src="images/certificate/camex-cert.png" alt="Digital Services Certificate" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -1346,6 +1346,7 @@ body {
 
 </body>
 </html>
+
 
 
 
