--- a/certifications.html
+++ b/certifications.html
@@ -353,7 +353,7 @@ body {
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src= "images/certificates/wapa-logo.png" alt="wapa Logo">
+                                <img src= "images/logo/wapa-logo.png" alt="wapa Logo">
                             </div>
                             <div class="certification-content">
                                 <h3>Wapa</h3>
@@ -836,7 +836,7 @@ body {
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certificate/camex-cert.png" alt="Digital Services Certificate" class="img-fluid certificate-img">
+                    <img src="images/certificates/camex-cert.png" alt="Digital Services Certificate" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -868,11 +868,12 @@ body {
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Skill Acquisition Programme/h5>
+                    <h5 class="modal-title">Skill Acquisition Programme</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certificates/wapa-cert.jpg" alt="Wapa" class="img-fluid certificate-img">
+                    <img src="images/certificates/wapa.jpeg" alt="Wapa" class="img-fluid certificate-img">
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -1346,6 +1347,7 @@ body {
 
 </body>
 </html>
+
 
 
 
