--- a/certifications.html
+++ b/certifications.html
@@ -353,7 +353,8 @@ body {
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src= "images/logo/wapa-logo.png" alt="wapa Logo">
+                                <img src= "images/logo/wapa-logo.jpg" alt="wapa Logo">
+                                
                             </div>
                             <div class="certification-content">
                                 <h3>Wapa</h3>
@@ -1347,6 +1348,7 @@ body {
 
 </body>
 </html>
+
 
 
 
