--- a/certifications.html
+++ b/certifications.html
@@ -353,7 +353,7 @@ body {
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src= "images/logo/wapa-logo.jpg" alt="wapa Logo">
+                                <img src= "images/logos/wapa-logo.jpg" alt="wapa Logo">
                                 
                             </div>
                             <div class="certification-content">
@@ -1349,6 +1349,7 @@ body {
 
 </body>
 </html>
+
 
 
 
