--- a/certifications.html
+++ b/certifications.html
@@ -371,6 +371,28 @@ body {
                     </div>
                 </div>
             </div>
+                    <!-- AI Academy Africa -->
+<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
+    <div class="certification-card">
+        <div class="certification-logo">
+            <img src="images/logos/aiacademy-logo.jpg" alt="AI Academy Africa Logo">
+        </div>
+        <div class="certification-content">
+            <h3>Artificial Intelligence Bootcamp</h3>
+            <p class="certification-issuer">Issued by [AI] Academy Africa</p>
+            <p class="certification-date">Issued: November 2025 • No Expiration</p>
+            <div class="certification-skills">
+                <span class="badge bg-light text-dark">Machine Learning</span>
+                <span class="badge bg-light text-dark">Artificial Intelligence</span>
+                <span class="badge bg-light text-dark">Python</span>
+            </div>
+            <a href="#" class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal" data-bs-target="#certModal7">
+                <i class="bi bi-eye me-2"></i>View Certificate
+            </a>
+        </div>
+    </div>
+</div>
+
         </section>
 
         <!-- TECHNICAL SKILLS -->
@@ -882,6 +904,29 @@ body {
             </div>
         </div>
     </div>
+
+<!-- Certificate Modal 7 -->
+<div class="modal fade" id="certModal7" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Artificial Intelligence Certificate</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-center">
+                <img src="images/certificates/ai.jpg" alt="AI Academy Africa Certificate" class="img-fluid certificate-img">
+                <p class="mt-3 text-muted">
+                    Issued by <strong>[AI] Academy Africa</strong>, recognizing completion of the 3-month intensive Artificial Intelligence  
+                    Covered Machine Learning, Neural Networks, and AI Applications in real-world projects.
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
                     
     <!-- FOOTER -->
     <footer class="footer bg-dark text-light py-5 mt-5">
@@ -1348,6 +1393,7 @@ body {
 
 </body>
 </html>
+
 
 
 
