--- a/certifications.html
+++ b/certifications.html
@@ -375,7 +375,7 @@ body {
 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
     <div class="certification-card">
         <div class="certification-logo">
-            <img src="images/logos/aiacademy-logo.jpg" alt="AI Academy Africa Logo">
+            <img src="images/logos/ai-logo.jpeg" alt="AI Academy Africa Logo">
         </div>
         <div class="certification-content">
             <h3>Artificial Intelligence Bootcamp</h3>
@@ -1393,6 +1393,7 @@ body {
 
 </body>
 </html>
+
 
 
 
