--- a/certifications.html
+++ b/certifications.html
@@ -6,7 +6,7 @@
     <title>Certifications & Skills - Peter Lightspeed | Virtual Assistant & Web Developer</title>
     
     <!-- Meta tags for SEO -->
-    <meta name="description" content="Explore Peter Lightspeed's professional certifications, qualifications, and technical skills in web development, graphic design, and digital marketing.">
+    <meta name="description" content=" Explore Peter Lightspeed's professional certifications, qualifications, and technical skills in web development, graphic design, and digital marketing.">
     <meta name="keywords" content="Peter Lightspeed certifications, web development skills, graphic design qualifications, virtual assistant training, digital marketing certifications">
     <meta name="author" content="Peter Eluwade Toluwanimi">
     <meta name="robots" content="index, follow">
@@ -376,7 +376,7 @@ body {
 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
     <div class="certification-card">
         <div class="certification-logo">
-            <img src="images/logos/ai-certificates.webp" alt="AI Academy Africa Logo">
+            <img src="images/logos/ai-logo.webp" alt="AI Academy Africa Logo">
         </div>
         <div class="certification-content">
             <h3>Artificial Intelligence Bootcamp</h3>
@@ -1395,5 +1395,6 @@ body {
     
 </body>
 </html>
+
 
 
