--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@ body {
                             </div>
                         </div>
                     </div>
+                </div>
                     
                     <!-- Graphic Design -->
                     <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200">
@@ -495,7 +496,7 @@ body {
                     </a>
                 </div>
             </div>
-        </section>
+          </section>
 
         <!-- PROJECTS PREVIEW -->
         <section id="projects-preview" class="py-5 bg-light">
@@ -822,10 +823,11 @@ body {
                 <!-- Brand Section -->
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
                     <div class="footer-brand">
-                        <h4 class="fw-bold mb-3 text-white">
+                        <h5 class="fw-bold mb-3 text-white">
                             <i class="bi bi-lightning-charge text-warning me-2"></i>
                             Peter Lightspeed
-                        </h4>
+                        </h5>
+                        
                         <p class="mb-3 text-light">
                         Your trusted partner for smart web development and digital solutions delivering quality, speed, and precision powered by creativity and AI.
                         </p>
