--- a/demo.html
+++ b/demo.html
@@ -14,9 +14,10 @@
     
     <style>
         .demo-container {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: blue
             min-height: 100vh;
             padding: 20px 0;
+            margin-bottom: 50px;
         }
         
         .demo-header {
