--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
     
     <style>
         .demo-container {
-            background: blue
+            background: blue;
             min-height: 100vh;
             padding: 20px 0;
             margin-bottom: 50px;
